--- a/sass/modules/_faq-area.scss
+++ b/sass/modules/_faq-area.scss
@@ -114,8 +114,8 @@
         @media only screen and (min-width: 0px) and (max-width: 991px) {
             // margin-left: 10px;
             top: unset !important;
-            bottom: 0;
-            transform: translateY(50%);
+            bottom: 0 !important;
+            transform: translateY(50%) !important;
         }
         @include lg{
             top: unset !important;
@@ -127,9 +127,9 @@
             bottom: unset;
             transform: translateY(-50%);
             @include sm{
-                top: unset;
-                bottom: 0;
-                transform: translateY(50%);
+                // top: unset;
+                // bottom: 0;
+                // transform: translateY(50%);
             }
         }
         &.right{
@@ -140,10 +140,10 @@
             margin-right: 0;
             transform: translate(25px, 25px);
             @include sm{
-                top: unset;
-                bottom: 0;
-                transform: translateY(50%);
-                justify-content: center;
+                // top: unset;
+                // bottom: 0;
+                // transform: translateY(50%);
+                // justify-content: center;
             }
         }
         &.left{
@@ -155,10 +155,10 @@
             transform: translate(-25px, -25px);
             left: 0;
             @include sm{
-                top: unset;
-                bottom: 0;
-                transform: translateY(50%);
-                justify-content: center;
+                // top: unset;
+                // bottom: 0;
+                // transform: translateY(50%);
+                // justify-content: center;
             }
         }
         i {
